--- a/client/src/components/Cards/Cards.module.css
+++ b/client/src/components/Cards/Cards.module.css
@@ -1,10 +1,8 @@
 .cards{
  display: grid;
- grid-template-columns: 1fr 1fr 1fr 1fr; 
+ grid-template-columns: 1fr 1fr 1fr ; 
  width: 90vw;
  margin-left: 5vw;
- 
-
 }
 
 .cards Card{
