--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,1 +1,27 @@
-.App{border:solid 2px red}
+/*
+font-family: 'Allison', cursive;
+font-family: 'Dosis', sans-serif; /// texto corrido
+font-family: 'Josefin Sans', sans-serif; //puntiaguda
+font-family: 'Square Peg', cursive; //titulos
+*/
+body{
+ font-family: 'Dosis', sans-serif; 
+ font-size: 18px;
+ padding: 0px !important; 
+ margin: 0px !important;
+ background-color: black;
+ color: Gainsboro;
+}
+html {
+ scroll-behavior: smooth;
+}
+.App{padding:0px;}
+.image-page img{width: 100vw;}
+
+h2{font-family: 'Square Peg', cursive; font-size:40px; margin:0; color: red; line-height: 1;}
+
+.boton-principal{ background-color: red; border:solid 1px black; border-radius: 8px; margin-left: 4px; margin-right: 4px; color:Gainsboro; padding: 4px 10px; cursor:pointer;  transition: 600ms all ease;}
+.boton-principal:hover{background-color: black; color:red}
+input,select{background-color: black; color:red; border:solid 1px Gainsboro; border-radius: 8px; margin-left: 4px; margin-right: 4px; padding: 4px 10px;  transition: 600ms all ease;}
+select optgroup{border:0}
+a{text-decoration: none; color: yellow}
