--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -1,5 +1,5 @@
 .card{
- border-radius: 20px; width: 300px; height: 440px; 
+ border-radius: 20px; width: 300px; height: 470px; 
  position: relative; margin:8px; margin-bottom: 40px; text-align: center; border: solid 1px red; overflow: hidden;
 }
 .cardInterno{
@@ -9,9 +9,11 @@ border: solid 4px SlateBlue;
 background: LightSteelBlue;
 }
 .more{position: absolute; left:20px; margin-left:-25%; z-index: 1; margin-top:-60px; background-color: black; margin-left:auto; margin-right: auto;}
-.cardImage{
- position: relative;
+.image{
+ overflow: hidden; height:230px; margin-bottom: 10px;
 }
+.image img{height: 100%; width: auto;}
+
 .cardImageUp{position:absolute; top:-30px; left:0; z-index: 10; width: 100%; 
 }
 .cardImageUp img{border-radius: 50%; border:solid 4px white; width: 80%; height: auto; 
@@ -45,7 +47,8 @@ box-shadow: black 2px 2px 10px;
   margin-bottom: 15px;
 }
 
-.diets div{border-radius: 8px; background-color: darkgrey; padding:0px 8px; display:inline-block; margin: 4px 4px; color: black }
+.diets div{border-radius: 8px; background-color: darkgrey; padding:0px 8px; display:inline-block; margin: 4px 4px; color: black; cursor: pointer; }
+.diets div:hover{background-color: black; color:red}
 .znDescription{ margin-top: 80px;}
 
 .card:hover .cardImageUp img{
