--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,7 +10,10 @@ body{
  padding: 0px !important; 
  margin: 0px !important;
  background-color: black;
- color: Gainsboro;
+ color: Gainsboro; min-height: 100vh;
+ width: 100vw;
+ overflow-y: auto;
+ overflow-x: hidden;
 }
 html {
  scroll-behavior: smooth;
@@ -22,6 +25,57 @@ h2{font-family: 'Square Peg', cursive; font-size:40px; margin:0; color: red; lin
 
 .boton-principal{ background-color: red; border:solid 1px black; border-radius: 8px; margin-left: 4px; margin-right: 4px; color:Gainsboro; padding: 4px 10px; cursor:pointer;  transition: 600ms all ease;}
 .boton-principal:hover{background-color: black; color:red}
-input,select{background-color: black; color:red; border:solid 1px Gainsboro; border-radius: 8px; margin-left: 4px; margin-right: 4px; padding: 4px 10px;  transition: 600ms all ease;}
+input,select, textarea{background-color: black; color:white; border:solid 1px rgb(78, 78, 78); border-radius: 8px; margin-left: 4px; margin-right: 4px; padding: 8px 10px;  transition: 600ms all ease; font-size: 15px;}
 select optgroup{border:0}
+
+/* Estilo base del checkbox */
+input[type="checkbox"] {
+ /* Puedes ajustar los estilos según tus preferencias */
+ margin-right: 10px;
+}
+
+/* Cambio de estilo cuando el checkbox está marcado */
+input[type="checkbox"]:checked {
+ border-color: green; /* Por ejemplo, cambiar el borde cuando está marcado */
+}
+
+/* Estilo del indicador del checkbox (el checkmark) */
+input[type="checkbox"]::before {
+ content: "\2713"; /* Símbolo de checkmark Unicode */
+ display: inline-block;
+ width: 18px;
+ height: 18px;
+ text-align: center;
+ border: 1px solid #ccc;
+ border-radius: 3px;
+ background-color: #fff;
+ margin-right: 5px;
+ font-size: 14px;
+ line-height: 18px;
+ color: transparent; /* Ocultar el checkmark por defecto */
+}
+
+/* Cambio de estilo del checkmark cuando el checkbox está marcado */
+input[type="checkbox"]:checked::before {
+ color: green; /* Cambiar el color del checkmark cuando está marcado */
+ border-color: green;
+ background-color: white; /* Cambiar el fondo cuando está marcado */
+}
+
 a{text-decoration: none; color: yellow}
+
+.footer{background-color: rgba(255,255,255,0.8); position: relative; bottom: 0; left: 0; right: 0; margin-top:20px
+
+}
+.footer-cont{
+ display: grid; grid-template-columns: 1fr 1fr; width: 80vw; margin: 0 auto; max-width: 800px; color:black
+}
+.footer-cont div{text-align: center;}
+
+.danger{color:red; font-size: 12px;}
+.warning{border:solid 1px red}
+.w-full{width: 100%;}
+.w-90{width: 90%;}
+.w-80{width: 80%;}
+.w-50{width: 50%;}
+.w-30{width: 30%;}
