--- a/client/src/index.css
+++ b/client/src/index.css
@@ -22,7 +22,8 @@ html {
 .image-page img{width: 100vw;}
 
 h2{font-family: 'Square Peg', cursive; font-size:40px; margin:0; color: red; line-height: 1;}
-
+.text-white{color:white}
+.right{text-align: right; justify-content: right;}
 .boton-principal{ background-color: red; border:solid 1px black; border-radius: 8px; margin-left: 4px; margin-right: 4px; color:Gainsboro; padding: 4px 10px; cursor:pointer;  transition: 600ms all ease;}
 .boton-principal:hover{background-color: black; color:red}
 input,select, textarea{background-color: black; color:white; border:solid 1px rgb(78, 78, 78); border-radius: 8px; margin-left: 4px; margin-right: 4px; padding: 8px 10px;  transition: 600ms all ease; font-size: 15px;}
