--- a/client/src/components/Cards/Cards.module.css
+++ b/client/src/components/Cards/Cards.module.css
@@ -1,19 +1,17 @@
 .cards{
- display: grid;
+ display: grid; justify-content: center; align-items: center; justify-items: center;
  grid-template-columns: 1fr 1fr 1fr ; 
  width: 90vw;
- margin-left: 5vw;
+ max-width: 1200px;
+ margin: 0 auto;
 }
 
-.cards Card{
-  margin-left: auto;
- margin-right: auto;
-}
+
 
 
 
  @media screen and (min-width: 971px) and (max-width: 1200px) {
- .cards{grid-template-columns: 1fr 1fr 1fr; }
+ .cards{grid-template-columns: 1fr 1fr ; }
  
 }
 
