--- a/client/src/components/NavBar/NavBar.module.css
+++ b/client/src/components/NavBar/NavBar.module.css
@@ -27,7 +27,8 @@ border-radius: 10px; box-shadow: 2px 2px 4px black;
 
 
 @media screen and (max-width: 950px) {
- .header {
+ 
+/*  .header {
   display:grid; grid-template-columns: 1fr 1fr; gap: 0; height: 150px;
   
 }
@@ -41,6 +42,6 @@ border-radius: 10px; box-shadow: 2px 2px 4px black;
 }
 .col:last-child {
   order: 2;
-}
+} */
  
 }
