--- a/client/src/views/Detail/Detail.module.css
+++ b/client/src/views/Detail/Detail.module.css
@@ -18,3 +18,9 @@
 .detail img{
  border-radius: 10px; margin-top:10px; margin-bottom: 10px;
 }
+
+@media screen and (max-width: 950px) {
+.cont{
+ grid-template-columns: 1fr; gap: 20px; margin-top: 25px; 
+}
+}
