--- a/client/src/views/Home/Home.module.css
+++ b/client/src/views/Home/Home.module.css
@@ -15,3 +15,19 @@ border-radius: 50%; background-color: red; color: white; padding: 2px 6px; text-
  align-items: center; 
  justify-content: center; height: 60px;
 }
+
+@media screen and (max-width: 950px) {
+ .filtros{
+display:grid;
+grid-template-columns: 1fr 1fr;
+padding: 25px 10px
+ }
+}
+
+@media screen and (max-width: 690px) {
+.filtros{
+display:grid;
+grid-template-columns: 1fr ;
+padding: 70px 10px; width: 50vw; margin: 0 auto;
+ }
+}
